fix spacing - connect

--- a/styles.less
+++ b/styles.less
@@ -354,7 +354,7 @@ header {
 // Connect styles for all pages
 .connect {
   width: 100%;
-  padding: 5rem 0;
+  padding: 3rem 0;
   color: @gray;
   background-color: @primary-color;
   font-family: @font-heading;
@@ -368,7 +368,6 @@ header {
   }
 
   h1 {
-    margin: 3rem 0 .5rem 0;
     font-family: @font-heading;
     font-size: 2.25rem;
     text-align: center;
@@ -383,11 +382,10 @@ header {
   } 
   .social {
     width: 100%;
-    margin-top: 2rem;
     text-align: center;
     .fab {  
       padding: 0 1.25rem;
-      font-size: 2.5rem;
+      font-size: 2rem;
       color: @gray;
     }
     .fab:hover {
@@ -401,6 +399,9 @@ header {
       -ms-filter: drop-shadow(0 1px 10px rgba(0,0,0,.9));
       -o-filter: drop-shadow(0 1px 10px rgba(0,0,0,.9));
       filter: drop-shadow(0 1px 10px rgba(0,0,0,.9));	 	
+    }
+    i {
+      vertical-align: bottom;
     }
   }
 
